@@ -17,13 +17,13 @@ public class SagaLockManagerSql {
     String sagaLockTable = eventuateSchema.qualifyTable("saga_lock_table");
     String sagaStashTable = eventuateSchema.qualifyTable("saga_stash_table");
 
-    insertIntoSagaLockTableSql = String.format("INSERT INTO %s(target, saga_type, saga_id) VALUES(?, ?,?)", sagaLockTable);
-    insertIntoSagaStashTableSql = String.format("INSERT INTO %s(message_id, target, saga_type, saga_id, message_headers, message_payload) VALUES(?, ?, ?, ?, ?, ?)", sagaStashTable);
-    selectFromSagaLockTableSql = String.format("select saga_id from %s WHERE target = ? FOR UPDATE", sagaLockTable);
-    selectFromSagaStashTableSql = String.format("select message_id, target, saga_type, saga_id, message_headers, message_payload from %s WHERE target = ? ORDER BY message_id LIMIT 1", sagaStashTable);
-    updateSagaLockTableSql = String.format("update %s set saga_type = ?, saga_id = ? where target = ?", sagaLockTable);
-    deleteFromSagaLockTableSql = String.format("delete from %s where target = ?", sagaLockTable);
-    deleteFromSagaStashTableSql = String.format("delete from %s where message_id = ?", sagaStashTable);
+    insertIntoSagaLockTableSql = "INSERT INTO %s(target, saga_type, saga_id) VALUES(?, ?,?)".formatted(sagaLockTable);
+    insertIntoSagaStashTableSql = "INSERT INTO %s(message_id, target, saga_type, saga_id, message_headers, message_payload) VALUES(?, ?, ?, ?, ?, ?)".formatted(sagaStashTable);
+    selectFromSagaLockTableSql = "select saga_id from %s WHERE target = ? FOR UPDATE".formatted(sagaLockTable);
+    selectFromSagaStashTableSql = "select message_id, target, saga_type, saga_id, message_headers, message_payload from %s WHERE target = ? ORDER BY message_id LIMIT 1".formatted(sagaStashTable);
+    updateSagaLockTableSql = "update %s set saga_type = ?, saga_id = ? where target = ?".formatted(sagaLockTable);
+    deleteFromSagaLockTableSql = "delete from %s where target = ?".formatted(sagaLockTable);
+    deleteFromSagaStashTableSql = "delete from %s where message_id = ?".formatted(sagaStashTable);
   }
 
   public String getInsertIntoSagaLockTableSql() {
