@@ -17,7 +17,7 @@ import io.eventuate.tram.sagas.reactive.orchestration.ReactiveSaga;
 import io.eventuate.tram.sagas.reactive.orchestration.ReactiveSagaCommandProducer;
 import io.eventuate.tram.sagas.reactive.orchestration.ReactiveSagaInstanceRepository;
 import io.eventuate.tram.sagas.reactive.orchestration.ReactiveSagaManagerImpl;
-import org.junit.Assert;
+import org.junit.jupiter.api.Assertions;
 import reactor.core.publisher.Mono;
 
 import java.time.Duration;
@@ -30,7 +30,7 @@ import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Provides a DSL for writing unit tests for saga orchestrators
@@ -135,17 +135,17 @@ public class ReactiveSagaUnitTestSupport<T> {
   }
 
   public ReactiveSagaUnitTestSupport<T> to(String commandChannel) {
-    Assert.assertEquals("Expected one command", 1, sentCommands.size());
+    Assertions.assertEquals(1, sentCommands.size(), "Expected one command");
     sentCommand = sentCommands.get(0);
-    Assert.assertEquals(commandChannel, sentCommand.getDestination());
+    Assertions.assertEquals(commandChannel, sentCommand.getDestination());
     Message sentMessage = sentCommand.getMessage();
     if (expectedCommand != null) {
-      Assert.assertEquals(expectedCommand.getClass().getName(), sentMessage.getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE));
-      Assert.assertNotNull(sentMessage.getRequiredHeader(CommandMessageHeaders.REPLY_TO));
+      Assertions.assertEquals(expectedCommand.getClass().getName(), sentMessage.getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE));
+      Assertions.assertNotNull(sentMessage.getRequiredHeader(CommandMessageHeaders.REPLY_TO));
       this.expectingReply = true;
     } else {
-      Assert.assertEquals(expectedNotification.getClass().getName(), sentMessage.getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE));
-      Assert.assertNull(sentMessage.getHeader(CommandMessageHeaders.REPLY_TO).orElse(null));
+      Assertions.assertEquals(expectedNotification.getClass().getName(), sentMessage.getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE));
+      Assertions.assertNull(sentMessage.getHeader(CommandMessageHeaders.REPLY_TO).orElse(null));
       this.expectingReply = false;
     }
     sentCommands.clear();
@@ -159,26 +159,26 @@ public class ReactiveSagaUnitTestSupport<T> {
               .filter(sm -> corn.getCommandWithDestination().getCommand().getClass().getName().equals(sm.getMessage().getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE))
                           && corn.getCommandWithDestination().getDestinationChannel().equals(sm.getDestination()))
               .findAny()
-              .orElseThrow(() -> new AssertionError(String.format("Did not find expected command %s in %s", corn, sentCommands)));
+              .orElseThrow(() -> new AssertionError("Did not find expected command %s in %s".formatted(corn, sentCommands)));
 
       if (corn.isNotification())
-        Assert.assertNull(sentMessage.getMessage().getHeader(CommandMessageHeaders.REPLY_TO).orElse(null));
+        Assertions.assertNull(sentMessage.getMessage().getHeader(CommandMessageHeaders.REPLY_TO).orElse(null));
       else {
-        Assert.assertNotNull(sentMessage.getMessage().getRequiredHeader(CommandMessageHeaders.REPLY_TO));
+        Assertions.assertNotNull(sentMessage.getMessage().getRequiredHeader(CommandMessageHeaders.REPLY_TO));
         if (sentCommand != null)
-          Assert.fail(String.format("There can only be one command in %s", sentCommands));
+          Assertions.fail("There can only be one command in %s".formatted(sentCommands));
         sentCommand = sentMessage;
       }
     }
     if (commandsAndNotifications.size() != sentCommands.size())
-      Assert.fail(String.format("Expected these commands %s but there are extra %s", commandsAndNotifications, sentCommands));
+      Assertions.fail("Expected these commands %s but there are extra %s".formatted(commandsAndNotifications, sentCommands));
     sentCommands.clear();
   }
 
   public ReactiveSagaUnitTestSupport<T> withExtraHeaders(Map<String, String> expectedExtraHeaders) {
     Map<String, String> actualHeaders = sentCommand.getMessage().getHeaders();
     if (!actualHeaders.entrySet().containsAll(expectedExtraHeaders.entrySet()))
-      Assert.fail(String.format("Expected headers %s to contain %s", actualHeaders, expectedExtraHeaders));
+      Assertions.fail("Expected headers %s to contain %s".formatted(actualHeaders, expectedExtraHeaders));
     return this;
   }
 
@@ -221,7 +221,7 @@ public class ReactiveSagaUnitTestSupport<T> {
   }
 
   private void sendReply(Object reply, CommandReplyOutcome outcome) {
-    assertTrue("Sending reply but a command was not sent", expectingReply);
+    assertTrue(expectingReply, "Sending reply but a command was not sent");
     Message message = MessageBuilder
             .withPayload(JSonMapper.toJson(reply))
             .withHeader(ReplyMessageHeaders.REPLY_OUTCOME, outcome.name())
@@ -235,8 +235,8 @@ public class ReactiveSagaUnitTestSupport<T> {
 
   public ReactiveSagaUnitTestSupport<T> expectCompletedSuccessfully() {
     assertNoCommands();
-    assertTrue("Expected saga to have finished", sagaInstance.isEndState());
-    Assert.assertFalse("Expected saga to have finished successfully", sagaInstance.isCompensating());
+    assertTrue(sagaInstance.isEndState(), "Expected saga to have finished");
+    Assertions.assertFalse(sagaInstance.isCompensating(), "Expected saga to have finished successfully");
     return this;
   }
 
@@ -246,22 +246,22 @@ public class ReactiveSagaUnitTestSupport<T> {
         break;
       case 1:
         MessageWithDestination mwd = sentCommands.get(0);
-        Assert.fail(String.format("Expected saga to have finished but found a command of %s sent to %s: %s", mwd.getMessage().getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE), mwd.getDestination(), mwd.getMessage()));
+        Assertions.fail("Expected saga to have finished but found a command of %s sent to %s: %s".formatted(mwd.getMessage().getRequiredHeader(CommandMessageHeaders.COMMAND_TYPE), mwd.getDestination(), mwd.getMessage()));
         break;
       default:
-        Assert.assertEquals(emptyList(), sentCommands);
+        Assertions.assertEquals(emptyList(), sentCommands);
     }
   }
 
   public ReactiveSagaUnitTestSupport<T> expectRolledBack() {
     assertNoCommands();
-    assertTrue("Expected saga to have finished", sagaInstance.isEndState());
-    assertTrue("Expected saga to have rolled back", sagaInstance.isCompensating());
+    assertTrue(sagaInstance.isEndState(), "Expected saga to have finished");
+    assertTrue(sagaInstance.isCompensating(), "Expected saga to have rolled back");
     return this;
   }
 
   public void expectException(Exception expectedCreateException) {
-    Assert.assertEquals(expectedCreateException, createException.get());
+    Assertions.assertEquals(expectedCreateException, createException.get());
   }
 
   public ReactiveSagaUnitTestSupport<T> assertSagaData(Consumer<T> sagaDataConsumer) {
